kylin-photo-viewer (1.0.0-13) v101; urgency=medium
  
  * BUG号：55787
  * 需求号：无
  * 其他改动说明：添加按键响应按钮过滤，修复按键不响应切换图片的问题。

 -- zoujunnan <zoujunnan@kylinos.cn>  Wed,19  May 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-12) v101; urgency=high
  
  * BUG号：44692，54136，55275，55269，55266
  * 需求号：无
  * 其他改动说明：调用主题提供的属性，添加字体不跟随控制面板变化；添加MimeType的ras支持；修改主题图标调用。

 -- zoujunnan <zoujunnan@kylinos.cn>  Tue,18  May 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-11) v101; urgency=medium
  
  * BUG号：52136,53003
  * 需求号：无(任务号：26473)
  * 其他改动说明：desktop文件的MimeType去掉jp2格式的支持，添加sr格式。

 -- zoujunnan <zoujunnan@kylinos.cn>  Sat,08  May 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-10) v101; urgency=medium
  
  * BUG号：51270，51196，50947，50654，50236，51374，51443，51469，50254，52359，50826
  * 需求号：无
  * 其他改动说明：desktop文件的MimeType去掉jp2格式的支持，添加sr格式。

 -- zoujunnan <zoujunnan@kylinos.cn>  Thu,06  May 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-9) v101; urgency=medium
  
  * BUG号：49178，48841，48853，48859，48855，49323，49346，49331，48846，49453，49358，48899，45118，48318，48337，48325，49353，49341，48863，49716，49999
  * 需求号：无(任务号：26473)
  * 其他改动说明：更新用户手册相关内容

 -- zoujunnan <zoujunnan@kylinos.cn>  Fri,23  Apr 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-6) v101; urgency=medium
  
  * BUG号：47262，47255，47233，47290，45176，47305，48309，48341
  * 需求号：无
  * 其他改动说明：添加相册功能和界面；添加触控手势功能：旋转，左滑右滑；优化保存逻辑、优化相册逻辑

 -- liuyuhui <liuyuhui@kylinos.cn>  Mon,12  Apr 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-5) v101; urgency=medium
  
  * 代码规范
  * 添加深色模式按钮图标
  * 添加按键响应包括上一张，下一张，删除
  * 解决BUG#46044 鼠标悬浮于标题栏麒麟看图logo下侧位置时，logo呈选中状态显示
  * 已知问题：正常关闭的时候，终端可能会显示异常退出，用户正常操作不影响。
  * 已知问题：英文模式下，信息栏显示不全。

 -- liuyuhui <liuyuhui@kylinos.cn>  Tue,06  Apr 2021 09:46:00 +0800

kylin-photo-viewer (1.0.0-4) v101; urgency=medium
  
  * 解决BUG#45176 当图片显示比例为三位数时工具栏中图片的缩放百分比未位于比例缩小和比例放大的中央位置
  * 解决BUG#45090 窗口标题栏未响应鼠标双击事件 
  * 解决BUG#45084 动图的右键菜单鼠标悬浮状态闪烁，无法进行右键设置操作 
  * 解决BUG#44735 鼠标悬浮于图片详情页面上侧时无法调出标题栏
