@@ -8,4 +8,4 @@ Exec=/usr/bin/kylin-photo-viewer %u
 Icon=kylin-photo-viewer
 Type=Application
 Categories=Graphics;
-MimeType=application/ico;application/x-navi-animation;audio/x-riff;image/bmp;image/gif;image/ico;image/icon;image/jpeg;image/jpeg2000;image/jpg;image/jpx;image/pjpeg;image/png;image/qtif;image/svg;image/svg+xml;image/svg+xml-compressed;image/svg-xml;image/tiff;image/vnd.adobe.svg+xml;image/vnd.microsoft.icon;image/vnd.wap.wbmp;image/webp;image/x-MS-bmp;image/x-adobe-dng;image/x-bmp;image/x-canon-cr2;image/x-canon-crw;image/x-compressed-xcf;image/x-epson-erf;image/x-fuji-raf;image/x-gray;image/x-icb;image/x-icns;image/x-ico;image/x-icon;image/x-minolta-mrw;image/x-nikon-nef;image/x-olympus-orf;image/x-pcx;image/x-pentax-pef;image/x-png;image/x-portable-anymap;image/x-portable-bitmap;image/x-portable-graymap;image/x-portable-pixmap;image/x-quicktime;image/x-sony-arw;image/x-tga;image/x-win-bitmap;image/x-wmf;image/x-xbitmap;image/x-xcf;image/x-xpixmap;text/ico;text/xml-svg;image/x-sun-raster;image/x-cmu-raster;
+MimeType=application/ico;application/x-navi-animation;audio/x-riff;image/bmp;image/gif;image/ico;image/icon;image/jpeg;image/jpg;image/jpx;image/pjpeg;image/png;image/qtif;image/svg;image/svg+xml;image/svg+xml-compressed;image/svg-xml;image/tiff;image/vnd.adobe.svg+xml;image/vnd.microsoft.icon;image/vnd.wap.wbmp;image/webp;image/x-MS-bmp;image/x-adobe-dng;image/x-bmp;image/x-canon-cr2;image/x-canon-crw;image/x-compressed-xcf;image/x-epson-erf;image/x-fuji-raf;image/x-gray;image/x-icb;image/x-icns;image/x-ico;image/x-icon;image/x-minolta-mrw;image/x-nikon-nef;image/x-olympus-orf;image/x-pcx;image/x-pentax-pef;image/x-png;image/x-portable-anymap;image/x-portable-bitmap;image/x-portable-graymap;image/x-portable-pixmap;image/x-quicktime;image/x-sony-arw;image/x-tga;image/x-win-bitmap;image/x-wmf;image/x-xbitmap;image/x-xcf;image/x-xpixmap;text/ico;text/xml-svg;image/x-sun-raster;image/x-cmu-raster;
