@@ -16,6 +16,14 @@ int main(int argc, char *argv[])
 #else
     // do not support 4K.
 #endif
+     //添加9A0基于qt5.15 屏幕支持。
+#if (QT_VERSION >= QT_VERSION_CHECK(5, 12, 0))
+    QApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
+    QApplication::setAttribute(Qt::AA_UseHighDpiPixmaps);
+#endif
+#if (QT_VERSION >= QT_VERSION_CHECK(5, 14, 0))
+    QApplication::setHighDpiScaleFactorRoundingPolicy(Qt::HighDpiScaleFactorRoundingPolicy::PassThrough);
+#endif
     QApplication a(argc, argv);
 
     //注册MessageHandler
