@@ -1,3 +1,12 @@
+kylin-photo-viewer (1.0.0-14) v101; urgency=medium
+  
+  * BUG号：56040，55995，55870，55833，55814，54162，54129
+  * 需求号：无
+  * 其他改动说明：无
+  * 影响域：需对应ubuntukylin-default-settings (20.04.2+20210519)或以上版本，设置看图为默认图片查看器，双击看图支持的图片，由看图打开
+
+ -- zoujunnan <zoujunnan@kylinos.cn>  Thu,20  May 2021 09:46:00 +0800
+
 kylin-photo-viewer (1.0.0-13) v101; urgency=medium
   
   * BUG号：55787
